Syntax fixed in ConceptAggregateBuilderTest.